; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_mangle.c_write_local_name.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_mangle.c_write_local_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"local-name\00", align 1
@STRING_CST = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32)* @write_local_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_local_name(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @MANGLE_TRACE_TREE(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = call i32 @write_char(i8 signext 90)
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @write_encoding(i32 %10)
  %12 = call i32 @write_char(i8 signext 69)
  %13 = load i32, i32* %6, align 4
  %14 = call i64 @TREE_CODE(i32 %13)
  %15 = load i64, i64* @STRING_CST, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %3
  %18 = call i32 @write_char(i8 signext 115)
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @discriminator_for_string_literal(i32 %19, i32 %20)
  %22 = call i32 @write_discriminator(i32 %21)
  br label %29

23:                                               ; preds = %3
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @write_name(i32 %24, i32 1)
  %26 = load i32, i32* %5, align 4
  %27 = call i32 @discriminator_for_local_entity(i32 %26)
  %28 = call i32 @write_discriminator(i32 %27)
  br label %29

29:                                               ; preds = %23, %17
  ret void
}

declare dso_local i32 @MANGLE_TRACE_TREE(i8*, i32) #1

declare dso_local i32 @write_char(i8 signext) #1

declare dso_local i32 @write_encoding(i32) #1

declare dso_local i64 @TREE_CODE(i32) #1

declare dso_local i32 @write_discriminator(i32) #1

declare dso_local i32 @discriminator_for_string_literal(i32, i32) #1

declare dso_local i32 @write_name(i32, i32) #1

declare dso_local i32 @discriminator_for_local_entity(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
